--- a/ex02.css
+++ b/ex02.css
@@ -6,7 +6,12 @@
     justify-content: center;
     color: rgb(80, 12, 16);
 }
-.bold{
+
+.box01 a {
+    color: #2a403d;
+    text-decoration: none;
+}
+.box01 p{
     font-weight: bold;
 }
 #box{
