--- a/ex03.css
+++ b/ex03.css
@@ -8,6 +8,8 @@
 
 body{
     background-color: rgba(255,94,100);
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 #ball{
@@ -87,3 +89,21 @@ body{
         display: none;
     }
 }
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    text-align: center;
+    font-size: 0.5em;
+    text-transform: uppercase;
+    padding: 10px;
+    color: rgb(80, 12, 16);
+    letter-spacing: 3px;
+    }
+  
+    .footer a {
+      color: rgb(80, 12, 16);
+      text-decoration: none;
+    }
